--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and pro
 email: ankurgoel.juit@gmail.com
 phone: +91-7757017797
 # website: xyz.com #do not add http://
-linkedin: ankur-goel-7133b59a
+linkedin: ankurgoel92
 github: ankurgoel92
 # twitter: '@ankurgoel'
 # Update all the sections by editing the files inside _data folder.
